# sillyvpn

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: build_appimage.sh  check_env.sh
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  helper_call.rs  logging.rs  main.rs  models.rs  storage.rs
